[update] fix